--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
-    "gatsby": "^2.19.7",
+    "gatsby": "^2.23.21",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-material-ui-carousel": "^1.6.0",
     "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
