--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "gatsby": "^2.23.21",
+    "gatsby-plugin-layout": "^1.3.9",
     "gatsby-plugin-material-ui": "^2.1.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
