--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.23.21",
     "gatsby-plugin-layout": "^1.3.9",
     "gatsby-plugin-material-ui": "^2.1.9",
+    "gatsby-plugin-styled-components": "^3.3.9",
     "react": "^16.13.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-material-ui-carousel": "^1.6.0",
+    "react-refresh": "^0.8.3",
+    "styled-components": "^5.1.1",
     "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
